# house-manager-hq

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
agents/cto-be-auth/: AGENTS.md
agents/cto-db-migrations/: AGENTS.md
agents/cto-fe-dashboard/: AGENTS.md
agents/cto-fe-landingpage/: AGENTS.md
agents/head-chef/: AGENTS.md
agents/house-manager/: AGENTS.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: approvals.py  auth.py  health.py  runs.py  tasks.py  webhooks.py
backend/app/db/: models.py  session.py
backend/app/services/: agent_executor.py  auth.py
backend/tests/: test_health.py  test_tasks.py
casayashhq/: .env.local.example  .gitignore  DECISIONS.md  README.md  package-lock.json  package.json  proxy.ts
casayashhq/app/: globals.css  page.tsx
casayashhq/app/(dashboard)/: layout.tsx
casayashhq/components/dashboard/: AgentActivityLog.tsx  ApprovalCard.tsx  BudgetSummary.tsx  ChoreBoard.tsx  MealPlanTable.tsx  Sidebar.tsx  StatusBadge.tsx
casayashhq/components/landing/: AgentCards.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  WeeklySchedule.tsx
casayashhq/lib/: auth.ts  notion.ts  prisma.ts
casayashhq/prisma/: schema.prisma
casayashhq/types/: index.ts
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
(+29 files in other folders)
